2009-03-04      1.7001  Kill warnings about GE being deprecated;
                        Add missing dep on Digest::MD5

2009-02-26      1.7     Fix formatting for valid but unallocated UK numbers;
			One of the UK telcos whose name we check for in
			  tests renamed itself;
                        New UK allocations;
			Added country-to-code and national/international
			  prefix data to N::P::C, thanks to Michael Schout

2008-05-27      1.6     Magic country detection now works (thanks to
                          Jos Boumans for reporting the bug);
                        New UK allocations

2008-02-27      1.581   Added dependency on perl 5.006 (DBM::Deep uses 'our');
                        Removed docs from N::P::UK::DBM::Deep and
                          replaced with note about its status;
                        New UK allocations;
                        Removed t/pod* temporarily
2007-06-01      1.58    Number::Phone::Country updated to reflect KM/YT split
                          Mayotte moved into parts of +262, so now shares with
                          Reunion instead of Comoros
                        New UK allocations (in particular 03 range)
2007-03-13      1.57    New UK allocations;
                        Bundle DBM::Deep cos old version is incompatible
2007-02-24	1.5601	New UK allocations
2006-12-08	1.56	New UK allocations; 
                        Updated OFCOM parser;
                        Loads of Number::Phone::Country updates -
                          +1: NANP overlays: 226, 438, 762, 769, 829;
                          +269: Split Mayotte/Comores;
                          +381/2: Yugoslavia's *still* breaking up! (RS and ME);
                          +61 89162/4: Cocos and Christmas islands
                          +672 3: Norfolk Island
                          +672 1 0/1/2/3: Australian Antarctic bases
                          +681: Wallace and Futuna (corrected CCTLD)
                          +881 0: ICO Global